# Dualout-Video

./: .gitignore  CMakeLists.txt  README  helper,txt
dualout-core/: CMakeLists.txt  DualOutEngine.cpp  DualOutEngine.h  core_api.h  list_devices.cpp
dualout-video/: CMakeLists.txt
dualout-video/src/: dualout_bridge.cpp  dualout_bridge.h  enum_hwnd.cpp  main.cpp  mf_audio_reader.cpp  mf_audio_reader.h  mf_utils.h  player_core.cpp  player_core.h
